overlap fixed

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     width:  100%;
     height:  100vh;
     background-image: url(images/background.png);
-    background-size: 35%;
+    background-size: 25%;
     background-repeat: no-repeat;    
     background-position: right 5% bottom 75%; 
     margin-bottom:  50px;
@@ -60,7 +60,7 @@ nav ul li a::after{
     content: '';
     width:0;
     height: 3px;
-    background:#ff004f;
+    background:#fff;
     position:absolute;
     left:0; 
     bottom: -6px;
@@ -340,19 +340,18 @@ nav .fa-x {
         background-image: none;
     }
 
-    .header-text {
+     .header-text {
         margin-top: 100%;
         font-size: 8px;
     }
 
     .header-text h1 {
-        font-size: 30px;
-    }
+        font-size: 150%;
+    } 
 
     #about {
         margin-top: 151px;
-        transform: translate(-50%, -50%);
-    }    
+        transform: translate(-50%, -50%); */
+    /* } */
     
 }
-
